--- a/css/admin.css
+++ b/css/admin.css
@@ -1,3 +1,12 @@
+/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other (and change the direction - make the "cart" column go on top) */
+@media (max-width: 800px) {
+  .row {
+    flex-direction: column-reverse;
+  }
+  .col-25 {
+    margin-bottom: 20px;
+  }
+  
 /* Esto hace el fondo gris al clickar */
 input[type=text]:focus, input[type=password]:focus {
   background-color: #ddd;
